# delta

./: Cargo.toml  Makefile.toml  legacy_delegates.toml
common/: Cargo.toml
common/src/: state.rs
contracts/site-contract/: Cargo.toml
contracts/site-contract/src/: lib.rs
delegates/site-delegate/: Cargo.toml
delegates/site-delegate/src/: lib.rs
published-contract/: contract-id.txt  webapp.parameters
scripts/: add-migration.sh  sync-wasm.sh
ui/: Cargo.toml  build.rs
ui/assets/: styles.css  tailwind.css
ui/public/contracts/: site_contract.wasm  site_delegate.wasm
ui/src/: components.rs  example_data.rs  freenet_api.rs  main.rs  state.rs
ui/src/components/: add_site_dialog.rs  editor.rs  page_view.rs  pages_sidebar.rs  sites_sidebar.rs
ui/src/freenet_api/: connection.rs  delegate.rs  operations.rs
